# gpu-scripts

./: .env.example  .env.tabbyapi.example  LICENSE  README.md  TABBYAPI_QUICKSTART.md  VLLM_QUICKSTART.md  daf  install_python311.py  menu.sh  pyproject.toml  setup-cv.sh  setup-langchain.sh  setup-llm.sh  setup-micro-llm.sh  setup-openWebUI.sh  setup-rag.sh  setup-wan  setup-z-image.sh  setup_chainlit.sh  setup_fastapi.py  setup_tabbyapi.sh  setup_vllm.py.old  setup_vllm.sh  tabbyapi_control.sh  torch_fastapi.py  vllm_control.sh
