[tool.poetry]
name = "gpu-scripts"
version = "0.1.0"
description = ""
authors = ["Thomas Fey-Grytnes <thomas.grytnes@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.5.1+cu121", source = "pytorch"}
torchvision = {version = "^0.20.1+cu121", source = "pytorch"}
torchaudio = {version = "^2.5.1+cu121", source = "pytorch"}
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
transformers = "^4.57.3"
accelerate = "^1.12.0"
bitsandbytes = "^0.49.1"
sentence-transformers = "^5.2.0"
einops = "^0.8.1"
protobuf = "^6.33.4"
scipy = "^1.17.0"
auto-gptq = "^0.7.1"
python-dotenv = "^1.2.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
